--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
   },
   "dependencies": {
     "body-parser": "~1.18.2",
+    "bookshelf": "^0.11.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
-    "express": "~4.15.5",
+    "express": "~4.16.2",
+    "knex": "^0.14.1",
     "morgan": "~1.9.0",
+    "pg": "^7.4.0",
     "serve-favicon": "~2.4.5",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
@@ -55,7 +58,6 @@
     "eslint-plugin-node": "^5.2.0",
     "eslint-plugin-react": "7.3.0",
     "eventsource-polyfill": "^0.9.6",
-    "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.5",
     "friendly-errors-webpack-plugin": "^1.6.1",
