Add endpoint for creating a user

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       POSTGRES_PASSWORD: cool-password
       POSTGRES_USER: cool-user
       POSTGRES_DB: cool-database
+    volumes:
+      - /var/run/postgresql:/var/run/postgresql
   client:
     image: node:carbon
     command: yarn build
