--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "private": true,
   "scripts": {
     "server-start": "node ./server/bin/www",
+    "server-unit": "mocha -G --require ./server/test/helper.js ./server/test/unit/**/*.js --reporter=nyan",
     "client-dev": "node client/build/dev-server.js",
     "client-start": "node client/build/dev-server.js",
     "build": "node client/build/build.js",
@@ -22,6 +23,7 @@
     "@risingstack/protect": "^1.2.0",
     "body-parser": "~1.18.2",
     "bookshelf": "^0.11.1",
+    "bookshelf-uuid": "^1.0.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.2",
@@ -84,6 +86,7 @@
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.3.0",
     "phantomjs-prebuilt": "^2.1.15",
+    "proxyquire": "^1.8.0",
     "rimraf": "^2.6.2",
     "semver": "^5.4.1",
     "shelljs": "^0.7.8",
@@ -106,5 +109,9 @@
     "npm": ">= 3.0.0",
     "yarn": ">= 1.0.0"
   },
-  "browserslist": ["> 1%", "last 2 versions", "not ie <= 8"]
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
