--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "express": "~4.16.2",
     "knex": "^0.14.1",
     "le_node": "^1.7.1",
+    "lodash": "^4.17.4",
     "morgan": "~1.9.0",
     "pg": "^7.4.0",
+    "requireindex": "^1.1.0",
     "serve-favicon": "~2.4.5",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
