--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.2",
+    "jsonwebtoken": "^8.1.0",
     "knex": "^0.14.1",
     "le_node": "^1.7.1",
     "morgan": "~1.9.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^3.0.1",
     "pg": "^7.4.0",
     "serve-favicon": "~2.4.5",
     "vue": "^2.5.2",
