--- a/package.json
+++ b/package.json
@@ -8,15 +8,17 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "server-start": "node ./server/bin/www",
-    "server-unit": "mocha -G --require ./server/test/helper.js ./server/test/unit/**/*.js --reporter=nyan",
-    "client-dev": "node client/build/dev-server.js",
-    "client-start": "node client/build/dev-server.js",
     "build": "node client/build/build.js",
-    "client-unit":
-      "cross-env BABEL_ENV=test karma start client/test/unit/karma.conf.js --single-run",
-    "client-test": "npm run client-unit",
+    "start": "concurrently --kill-others --success first \"yarn server-start\" \"yarn client-start\"",
+    "start-with-mocks": "concurrently --kill-others --success first \"yarn mock-server\" \"yarn client-start\" ",
+    "test": "yarn client-unit && yarn server-unit",
+    "lint": "yarn client-lint && yarn server-lint",
+    "client-start": "node client/build/dev-server.js",
+    "client-unit": "cross-env BABEL_ENV=test karma start client/test/unit/karma.conf.js --single-run",
     "client-lint": "eslint --ext .js,.vue src client/test/unit/specs",
+    "mock-server": "node ./json-server/server.js",
+    "server-start": "cd server && node bin/www",
+    "server-unit": "mocha -G --require ./server/test/helper.js ./server/test/unit/**/*.js --reporter=nyan",
     "server-lint": "eslint server"
   },
   "dependencies": {
@@ -24,9 +26,12 @@
     "body-parser": "~1.18.2",
     "bookshelf": "^0.11.1",
     "bookshelf-uuid": "^1.0.0",
+    "bootstrap": "4.0.0-beta.2",
+    "bootstrap-vue": "^1.2.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.2",
+    "json-server": "^0.12.1",
     "jsonwebtoken": "^8.1.0",
     "knex": "^0.14.1",
     "le_node": "^1.7.1",
@@ -36,6 +41,7 @@
     "pg": "^7.4.0",
     "serve-favicon": "~2.4.5",
     "vue": "^2.5.2",
+    "vue-resource": "^1.3.4",
     "vue-router": "^3.0.1",
     "winston": "^2.4.0",
     "winston-transport": "^3.0.1"
@@ -52,6 +58,7 @@
     "babel-register": "^6.26.0",
     "chai": "^4.1.2",
     "chalk": "^2.1.0",
+    "concurrently": "^3.5.1",
     "connect-history-api-fallback": "^1.4.0",
     "copy-webpack-plugin": "^4.1.1",
     "cross-env": "^5.0.5",
@@ -76,21 +83,21 @@
     "http-proxy-middleware": "^0.17.4",
     "inject-loader": "^3.0.1",
     "karma": "^1.7.1",
+    "karma-chrome-launcher": "^2.1.1",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
-    "karma-phantomjs-launcher": "^1.0.4",
-    "karma-phantomjs-shim": "^1.5.0",
     "karma-sinon-chai": "^1.3.2",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.31",
     "karma-webpack": "^2.0.5",
     "mocha": "^4.0.1",
+    "node-sass": "^4.7.2",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.3.0",
-    "phantomjs-prebuilt": "^2.1.15",
     "proxyquire": "^1.8.0",
     "rimraf": "^2.6.2",
+    "sass-loader": "^6.0.6",
     "semver": "^5.4.1",
     "shelljs": "^0.7.8",
     "sinon": "^4.0.1",
@@ -101,6 +108,7 @@
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.3",
     "vue-template-compiler": "^2.5.2",
+    "vue-unit-helper": "^1.0.7",
     "webpack": "^3.7.1",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-middleware": "^1.12.0",
