Add un-auth api endpoint for creating project does not support parents nor duplicate users

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@risingstack/protect": "^1.2.0",
     "body-parser": "~1.18.2",
     "bookshelf": "^0.11.1",
-    "bookshelf-modelbase": "^2.10.4",
+    "bookshelf-camelcase": "^2.0.1",
     "bookshelf-uuid": "^1.0.0",
     "bootstrap": "4.0.0-beta.2",
     "bootstrap-vue": "^1.2.0",
@@ -44,6 +44,7 @@
     "jsonwebtoken": "^8.1.0",
     "knex": "^0.14.1",
     "le_node": "^1.7.1",
+    "lodash": "^4.17.4",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.1",
