--- a/package.json
+++ b/package.json
@@ -9,17 +9,25 @@
   "private": true,
   "scripts": {
     "build": "node client/build/build.js",
-    "start": "concurrently --kill-others --success first \"yarn server-start\" \"yarn client-start\"",
-    "start-with-mocks": "concurrently --kill-others --success first \"yarn mock-server\" \"yarn client-start\" ",
+    "start":
+      "concurrently --kill-others --success first \"yarn server-start\" \"yarn client-start\"",
+    "start-with-mocks":
+      "concurrently --kill-others --success first \"yarn mock-server\" \"yarn client-start\" ",
     "test": "yarn client-unit && yarn server-unit",
     "lint": "yarn client-lint && yarn server-lint",
+    "precommit": "lint-staged",
     "client-start": "node client/build/dev-server.js",
-    "client-unit": "cross-env BABEL_ENV=test karma start client/test/unit/karma.conf.js --single-run",
+    "client-unit":
+      "cross-env BABEL_ENV=test karma start client/test/unit/karma.conf.js --single-run",
     "client-lint": "eslint --ext .js,.vue src client/test/unit/specs",
     "mock-server": "node ./json-server/server.js",
     "server-start": "cd server && node bin/www",
-    "server-unit": "mocha -G --require ./server/test/helper.js ./server/test/unit/**/*.js --reporter=nyan",
+    "server-unit":
+      "mocha -G --require ./server/test/helper.js ./server/test/unit/**/*.js --reporter=nyan",
     "server-lint": "eslint server"
+  },
+  "lint-staged": {
+    "*.js": ["eslint --fix", "git add"]
   },
   "dependencies": {
     "@risingstack/protect": "^1.2.0",
@@ -82,6 +90,7 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.17.4",
+    "husky": "^0.14.3",
     "inject-loader": "^3.0.1",
     "karma": "^1.7.1",
     "karma-chrome-launcher": "^2.1.1",
@@ -91,6 +100,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.31",
     "karma-webpack": "^2.0.5",
+    "lint-staged": "^5.0.0",
     "mocha": "^4.0.1",
     "node-sass": "^4.7.2",
     "opn": "^5.1.0",
@@ -121,9 +131,5 @@
     "npm": ">= 3.0.0",
     "yarn": ">= 1.0.0"
   },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+  "browserslist": ["> 1%", "last 2 versions", "not ie <= 8"]
 }
