--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
     image: node:carbon
     command: yarn start
     working_dir: /usr/src/app
+    environment:
+      NODE_ENV: development
     ports:
       - 8080:8080
     volumes:
