--- a/package.json
+++ b/package.json
@@ -9,26 +9,28 @@
   "private": true,
   "scripts": {
     "build": "node client/build/build.js",
-    "start":
-      "concurrently --kill-others --success first \"yarn server-start\" \"yarn client-start\"",
-    "start-with-mocks":
-      "concurrently --kill-others --success first \"yarn mock-server\" \"yarn client-start\" ",
+    "start": "concurrently --kill-others --success first \"yarn server-start\" \"yarn client-start\"",
+    "start-with-mocks": "concurrently --kill-others --success first \"yarn mock-server\" \"yarn client-start\" ",
     "test": "yarn client-unit && yarn server-unit",
     "lint": "yarn client-lint && yarn server-lint",
     "precommit": "lint-staged",
     "client-start": "node client/build/dev-server.js",
-    "client-unit":
-      "cross-env BABEL_ENV=test karma start client/test/unit/karma.conf.js --single-run",
+    "client-unit": "cross-env BABEL_ENV=test karma start client/test/unit/karma.conf.js --single-run",
     "client-lint": "eslint --ext .js,.vue src client/test/unit/specs",
     "mock-server": "node ./json-server/server.js",
     "server-start": "cd server && node bin/www",
-    "server-unit":
-      "mocha -G --require ./server/test/helper.js ./server/test/unit/**/*.js --reporter=nyan",
+    "server-unit": "mocha -G --require ./server/test/helper.js ./server/test/unit/**/*.js --reporter=nyan",
     "server-lint": "eslint server --env mocha,chai --global expect,sinon"
   },
   "lint-staged": {
-    "*.js": ["eslint --fix", "git add"],
-    "*.vue": ["eslint --ext .vue --fix", "git add"]
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ],
+    "*.vue": [
+      "eslint --ext .vue --fix",
+      "git add"
+    ]
   },
   "dependencies": {
     "@risingstack/protect": "^1.2.0",
@@ -76,7 +78,7 @@
     "css-loader": "^0.28.7",
     "cssnano": "^3.10.0",
     "eslint": "4.6.0",
-    "eslint-config-coderdojo": "^1.0.6",
+    "eslint-config-coderdojo": "^1.1.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-import-resolver-webpack": "^0.8.1",
     "eslint-loader": "^1.9.0",
@@ -118,6 +120,7 @@
     "sw-precache-webpack-plugin": "^0.11.4",
     "uglify-es": "^3.1.3",
     "url-loader": "^0.6.2",
+    "uuid": "^3.1.0",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.3",
     "vue-template-compiler": "^2.5.2",
@@ -133,5 +136,9 @@
     "npm": ">= 3.0.0",
     "yarn": ">= 1.0.0"
   },
-  "browserslist": ["> 1%", "last 2 versions", "not ie <= 8"]
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
