--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start-with-mocks":
       "concurrently --kill-others --success first \"yarn mock-server\" \"yarn client-start\" ",
     "test": "yarn client-unit && yarn server-unit",
-    "lint": "yarn client-lint && yarn server-lint",
+    "lint": "eslint --ext .js,.vue .",
     "precommit": "lint-staged",
     "client-start": "node client/build/dev-server.js",
     "client-unit":
@@ -27,8 +27,7 @@
     "server-lint": "eslint server --env mocha,chai --global expect,sinon"
   },
   "lint-staged": {
-    "*.js": ["eslint --fix", "git add"],
-    "*.vue": ["eslint --ext .vue --fix", "git add"]
+    "*.{js|vue}": ["eslint --ext .js,.vue", "git add"]
   },
   "dependencies": {
     "@risingstack/protect": "^1.2.0",
