--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "server-lint": "eslint server --env mocha,chai --global expect,sinon"
   },
   "lint-staged": {
-    "*.{js|vue}": ["eslint --ext .js,.vue", "git add"]
+    "*.{js|vue}": [
+      "eslint --ext .js,.vue",
+      "git add"
+    ]
   },
   "dependencies": {
     "@risingstack/protect": "^1.2.0",
@@ -110,6 +113,7 @@
     "shelljs": "^0.7.8",
     "sinon": "^4.0.1",
     "sinon-chai": "^2.14.0",
+    "sqlite3": "^3.1.13",
     "sw-precache-webpack-plugin": "^0.11.4",
     "uglify-es": "^3.1.3",
     "url-loader": "^0.6.2",
