--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "client-start": "node client/build/dev-server.js",
     "client-unit": "cross-env BABEL_ENV=test karma start client/test/unit/karma.conf.js --single-run",
     "client-lint": "eslint --ext .js,.vue src client/test/unit/specs",
-    "mock-server": "node ./json-server/server.js",
+    "mock-server": "node ./client/mock-server/server.js",
     "server-start": "cd server && node bin/www",
     "server-unit": "mocha -G --require ./server/test/helper.js ./server/test/**/*.spec.js --reporter=nyan",
     "server-lint": "eslint server --env mocha,chai --global expect,sinon"
@@ -34,11 +34,10 @@
     "bookshelf": "^0.11.1",
     "bookshelf-camelcase": "^2.0.1",
     "bookshelf-uuid": "^1.0.0",
-    "bootstrap": "4.0.0-beta.2",
-    "bootstrap-vue": "^1.2.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.2",
+    "js-cookie": "^2.2.0",
     "json-server": "^0.12.1",
     "jsonwebtoken": "^8.1.0",
     "knex": "^0.14.1",
@@ -50,6 +49,7 @@
     "pg": "^7.4.0",
     "serve-favicon": "~2.4.5",
     "vue": "^2.5.2",
+    "vue-dob-picker": "^1.0.8",
     "vue-resource": "^1.3.4",
     "vue-router": "^3.0.1",
     "winston": "^2.4.0",
