--- a/package.json
+++ b/package.json
@@ -43,15 +43,18 @@
     "knex": "^0.14.1",
     "le_node": "^1.7.1",
     "lodash": "^4.17.4",
+    "moment": "^2.19.3",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.1",
     "pg": "^7.4.0",
     "serve-favicon": "~2.4.5",
+    "vee-validate": "^2.0.0-rc.25",
     "vue": "^2.5.2",
-    "vue-dob-picker": "^1.0.8",
+    "vue-dob-picker": "1.0.9",
     "vue-resource": "^1.3.4",
     "vue-router": "^3.0.1",
+    "vue-search-select": "^2.4.0",
     "winston": "^2.4.0",
     "winston-transport": "^3.0.1"
   },
