--- a/package.json
+++ b/package.json
@@ -25,8 +25,12 @@
     "server-lint": "eslint server --env mocha,chai --global expect,sinon"
   },
   "lint-staged": {
-    "*.{js|vue}": [
-      "eslint --ext .js,.vue",
+    "*.vue": [
+      "eslint --fix --ext .js,.vue",
+      "git add"
+    ],
+    "*.js": [
+      "eslint --fix --ext .js,.vue",
       "git add"
     ]
   },
@@ -40,6 +44,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.2",
+    "helmet": "^3.9.0",
     "js-cookie": "^2.2.0",
     "json-server": "^0.12.1",
     "jsonwebtoken": "^8.1.0",
@@ -51,7 +56,7 @@
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.1",
     "pg": "^7.4.0",
-    "serve-favicon": "~2.4.5",
+    "uuid": "^3.1.0",
     "vee-validate": "^2.0.0-rc.25",
     "vue": "^2.5.2",
     "vue-dob-picker": "1.0.9",
@@ -59,7 +64,8 @@
     "vue-router": "^3.0.1",
     "vue-search-select": "^2.4.0",
     "winston": "^2.4.0",
-    "winston-transport": "^3.0.1"
+    "winston-transport": "^3.0.1",
+    "yargs": "^10.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.5",
@@ -124,7 +130,6 @@
     "sw-precache-webpack-plugin": "^0.11.4",
     "uglify-es": "^3.1.3",
     "url-loader": "^0.6.2",
-    "uuid": "^3.1.0",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.3",
     "vue-template-compiler": "^2.5.2",
