--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "uuid": "^3.1.0",
     "vee-validate": "^2.0.0-rc.25",
     "vue": "^2.5.2",
+    "vue-analytics": "^5.6.0",
     "vue-dob-picker": "1.0.9",
     "vue-resource": "^1.3.4",
     "vue-router": "^3.0.1",
