--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.2",
+    "express-https-redirect": "^1.0.0",
     "helmet": "^3.9.0",
     "js-cookie": "^2.2.0",
     "json-server": "^0.12.1",
