--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,9 @@ jobs:
   build:
     working_directory: ~/coolest-platform
     docker:
-      - image: node:8
+      - image: circleci/node:8-browsers
+        environment:
+          LANG: en_US.utf8
     steps:
       - checkout
       - restore_cache:
