--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "client-lint": "eslint --ext .js,.vue src client/test/unit/specs",
     "mock-server": "node ./client/mock-server/server.js",
     "server-start": "cd server && node bin/www",
-    "server-unit": "mocha -G --require ./server/test/helper.js ./server/test/unit/**/*.spec.js --reporter=nyan",
-    "server-int": "mocha -G --require ./server/test/helper.js ./server/test/integration/**/*.spec.js --reporter=nyan",
+    "server-unit": "mocha -G --require ./server/test/helper.js ./server/test/unit/**/*.spec.js --reporter=nyan --forbid-pending",
+    "server-int": "mocha -G --require ./server/test/helper.js ./server/test/integration/**/*.spec.js --reporter=nyan --forbid-pending",
     "server-lint": "eslint server --env mocha,chai --global expect,sinon"
   },
   "lint-staged": {
@@ -36,6 +36,7 @@
   "dependencies": {
     "@newrelic/native-metrics": "^2.1.2",
     "@sendgrid/mail": "^6.1.4",
+    "acl": "^0.4.11",
     "body-parser": "~1.18.2",
     "bookshelf": "^0.11.1",
     "bookshelf-camelcase": "^2.0.1",
