--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "acl": "^0.4.11",
     "body-parser": "~1.18.2",
     "bookshelf": "^0.11.1",
-    "bookshelf-camelcase": "^2.0.1",
+    "bookshelf-camelcase": "Wardormeur/bookshelf-camelcase",
     "bookshelf-uuid": "^1.0.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
