--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "bookshelf-uuid": "^1.0.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "decamelize": "^2.0.0",
     "express": "~4.16.2",
     "express-history-api-fallback": "^2.2.1",
     "express-https-redirect": "^1.0.0",
