--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "client-lint": "eslint --ext .js,.vue src client/test/unit/specs",
     "mock-server": "node ./client/mock-server/server.js",
     "server-start": "cd server && node bin/www",
-    "server-unit": "mocha -G --require ./server/test/helper.js ./server/test/unit --recursive --reporter=nyan --forbid-pending",
-    "server-int": "mocha -G --require ./server/test/helper.js ./server/test/integration --recursive --reporter=nyan --forbid-pending",
+    "server-unit": "mocha -t 3000 --require ./server/test/helper.js ./server/test/unit --recursive --reporter=nyan --forbid-pending",
+    "server-int": "mocha -t 10000 --require ./server/test/helper.js ./server/test/integration --recursive --reporter=nyan --forbid-pending",
     "server-lint": "eslint server --env mocha,chai --global expect,sinon"
   },
   "lint-staged": {
@@ -42,12 +42,14 @@
     "bookshelf": "^0.11.1",
     "bookshelf-camelcase": "Wardormeur/bookshelf-camelcase",
     "bookshelf-uuid": "^1.0.0",
+    "bootstrap": "4.0.0-beta.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "decamelize": "^2.0.0",
     "express": "~4.16.2",
     "express-history-api-fallback": "^2.2.1",
     "express-https-redirect": "^1.0.0",
+    "font-awesome": "^4.7.0",
     "helmet": "^3.9.0",
     "js-cookie": "^2.2.0",
     "json-server": "^0.12.1",
@@ -63,7 +65,7 @@
     "passport-jwt": "^3.0.1",
     "passport-local": "^1.0.0",
     "pg": "^7.4.0",
-    "uuid": "^3.1.0",
+    "uuid": "^3.2.1",
     "vee-validate": "^2.0.0-rc.25",
     "vue": "^2.5.2",
     "vue-analytics": "^5.6.0",
@@ -71,6 +73,7 @@
     "vue-resource": "^1.3.4",
     "vue-router": "^3.0.1",
     "vue-search-select": "DanielBrierton/vue-search-select",
+    "vue-tables-2": "^1.2.44",
     "winston": "^2.4.0",
     "yargs": "^10.0.3"
   },
