--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "helmet": "^3.9.0",
     "js-cookie": "^2.2.0",
     "json-server": "^0.12.1",
+    "json2csv": "^3.11.5",
     "jsonwebtoken": "^8.1.0",
     "karma-nyan-reporter": "^0.2.5",
     "knex": "^0.14.1",
