--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "client-lint": "eslint --ext .js,.vue src client/test/unit/specs",
     "mock-server": "node ./client/mock-server/server.js",
     "server-start": "cd server && node bin/www",
-    "server-unit": "mocha -t 3000 --require ./server/test/helper.js ./server/test/unit --recursive --reporter=nyan --forbid-pending",
+    "server-unit": "HOSTNAME=http://platform.local mocha -t 3000 --require ./server/test/helper.js ./server/test/unit --recursive --reporter=nyan --forbid-pending",
     "server-int": "NODE_ENV=test mocha -t 10000 --require ./server/test/helper.js ./server/test/integration --recursive --reporter=nyan --forbid-pending",
     "server-lint": "eslint server --env mocha,chai --global expect,sinon"
   },
