--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "le_node": "^1.7.1",
     "lodash": "^4.17.4",
     "moment": "^2.19.3",
+    "moment-timezone": "^0.5.14",
     "morgan": "~1.9.0",
     "newrelic": "^2.4.2",
     "passport": "^0.4.0",
