--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "lint-staged": "^5.0.0",
     "mocha": "^4.0.1",
     "node-sass": "^4.7.2",
+    "nodemon": "^1.17.3",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.3.0",
