Add seat generation back and front (#64)
* Add seat generation back and front
missing test, up for review before I go further

* Split by age for SC category

* Unit tests for seating generation

* Fix rebase issues

* Fix age range

* Change seed DoB to test CSV more easily
Fix typo for category splitting on Scratch
Fix comments from @dkb
Remove lint-staged : run your linter yourself

* Restore linter on commit
remove --fix parameter

--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
   },
   "lint-staged": {
     "*.vue": [
-      "eslint --fix --ext .js,.vue",
+      "eslint --ext .js,.vue",
       "git add"
     ],
     "*.js": [
-      "eslint --fix --ext .js,.vue",
+      "eslint --ext .js,.vue",
       "git add"
     ]
   },
