Update package versions Migrations needs update to remove deprecation logs

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "client-lint": "eslint --ext .js,.vue src client/test/unit/specs",
     "mock-server": "node ./client/mock-server/server.js",
     "server-start": "cd server && node bin/www",
-    "server-unit": "HOSTNAME=http://platform.local mocha -t 3000 --require ./server/test/helper.js ./server/test/unit --recursive --reporter=nyan --forbid-pending",
-    "server-int": "NODE_ENV=test mocha -t 10000 --require ./server/test/helper.js ./server/test/integration --recursive --reporter=nyan --forbid-pending",
+    "server-unit": "HOSTNAME=http://platform.local mocha -t 3000 -c --require ./server/test/helper.js ./server/test/unit --recursive --reporter=nyan --forbid-pending",
+    "server-int": "NODE_ENV=test mocha -t 10000 -c --require ./server/test/helper.js ./server/test/integration --recursive --reporter=nyan --forbid-pending",
     "server-lint": "eslint server --env mocha,chai --global expect,sinon"
   },
   "lint-staged": {
@@ -57,13 +57,13 @@
     "json2csv": "^3.11.5",
     "jsonwebtoken": "^8.1.0",
     "karma-nyan-reporter": "^0.2.5",
-    "knex": "^0.14.1",
+    "knex": "^0.15",
     "le_node": "^1.7.1",
     "lodash": "^4.17.4",
     "moment": "^2.19.3",
     "moment-timezone": "^0.5.14",
     "morgan": "~1.9.0",
-    "newrelic": "^2.4.2",
+    "newrelic": "^4",
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.1",
     "passport-local": "^1.0.0",
