Change server-side integration tests to use pg instead of sqlite

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,5 +36,7 @@ services:
     working_dir: /usr/src/app
     environment:
       NODE_ENV: development
+    depends_on:
+      - db
     volumes:
       - ./:/usr/src/app/
