Use docker-compose instead of yarn for circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
             - node_modules
       - run:
           name: Tests
-          command: yarn test
+          command: docker-compose up test
   deploy:
     working_directory: ~/coolest-platform
     docker:
