--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
     working_dir: /usr/src/app
     environment:
       NODE_ENV: development
+    user: root
     depends_on:
       - db
     volumes:
