--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,5 +36,8 @@ services:
     working_dir: /usr/src/app
     environment:
       NODE_ENV: development
+    user: root
+    depends_on:
+      - db
     volumes:
       - ./:/usr/src/app/
