Set the creation of admin on startup Only if it doesn't exists yet Set by env var Rework of the int tests seeds was required as it was overriding those values Int test are now sharing the seed with development Int test for projects are now without side effect between endpoints

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
       # args, but we don't use the Dockerfile in dev
       EVENT_SLUG: 'cp-2018'
       GOOGLE_ANALYTICS_PROPERTY_ID: 'UA-112027238-3'
+      MASTER_ADMIN_PASSWORD: 'banana'
+      MASTER_ADMIN_EMAIL: 'hello@coolestprojects.org'
     ports:
       - 8080:8080
       - 9229:9229
@@ -40,6 +42,8 @@ services:
     working_dir: /usr/src/app
     environment:
       NODE_ENV: development
+      MASTER_ADMIN_PASSWORD: 'banana'
+      MASTER_ADMIN_EMAIL: 'hello@coolestprojects.org'
     user: root
     depends_on:
       - db
