Adds advanced admin page
Advanced page shows details of event configuration, name, dates etc. to
allow admins to easily check that information is correct.

Move the confirmation email and generate seating functionality to the
advanced page so they are not on the standard admin page and won't
accidentally be used.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start-with-mocks": "concurrently --kill-others --success first \"yarn mock-server\" \"yarn client-start\" ",
     "test": "yarn client-unit && yarn server-unit && yarn server-int",
     "lint": "eslint --ext .js,.vue .",
+    "lint-fix": "eslint --ext .js,.vue . --fix",
     "precommit": "lint-staged",
     "client-start": "node client/build/dev-server.js",
     "client-unit": "cross-env BABEL_ENV=test karma start client/test/unit/karma.conf.js --single-run",
